objects/tdc_cti__IVR_Response__c/tdc_cti__IVR_Response__c.object-meta.xml
<CustomObject>
    <label>IVR Response</label>
    <nameField>
        <label>IVR Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IVR Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>