objects/tdc_cti__IVR_Response__c/fields/tdc_cti__Call_Routing_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Routing_Mechanism__c</fullName>
    <label>Call Routing Mechanism</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simultaneous</fullName>
                <default>true</default>
                <label>Simultaneous</label>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>