objects/tdc_cti__IVR_Response__c/fields/tdc_cti__IVR_Request__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__IVR_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IVR Request</label>
    <referenceTo>tdc_cti__IVR_Request__c</referenceTo>
    <relationshipLabel>IVR Responses</relationshipLabel>
    <relationshipName>IVR_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>