objects/tdc_cti__IVR_Response__c/fields/tdc_cti__Route_To__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Route_To__c</fullName>
    <description>This filed is used to hold the option last communicator record owner with queue.</description>
    <label>Route To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>